# edgevisionarie-bot

./: .dockerignore  .env.example  Dockerfile  Makefile  PLAN.md  README.md  documento_base_rag_servicios_software.md  pyproject.toml
app/: __init__.py  checkpointing.py  main.py  settings.py
app/dspy/: __init__.py  adapters.py  datasets.py  metrics.py  programs.py  registry.py  signatures.py
app/graph/: workflow.py
app/memory_runtime/: __init__.py  runtime.py  store.py  summary.py  types.py
app/models/: schemas.py
app/observability/: flow_logger.py  router_input_logger.py
app/services/: __init__.py  agent.py  assistant_service.py  barbershop_memory.py  byteworkers_memory.py  calendly.py  chatwoot.py  company_config.py  llm.py  memory.py  qdrant.py  router.py
app/traces/: __init__.py  context.py  models.py  orm.py  queue.py  store.py
app/webhooks/: routes.py
config/: company.json
datasets/dspy/: conversation.jsonl  discovery_call copy.jsonl  discovery_call.jsonl  rag.jsonl  route.jsonl  summary.jsonl
docs/: semantic-router-migration-plan.md
scripts/: dspy_compile.py  dspy_eval.py  prepare_postgres.py
tests/: test_assistant_service.py  test_dspy_adapters.py  test_llm.py  test_memory.py  test_router.py  test_trace_context.py  test_trace_store.py  test_webhook.py  test_workflow.py
